using System;
public enum EnemyType
{
    Feu,
    Glace
}