using System;
using UnityEngine;

namespace Game
{
    public class Bullets : Projectile
    {
        private GameObject prefab;
        private Ennemy ennemy;
        private float speed;
        private int damage;
        private GameObject bulletImpact;

        public Bullets()
        {
        }

        new public void SetTarget(Ennemy target)
        {

        }

        new public void SetDamage(float damage)
        {

        }
        new public void HitTarget()
        {

        }
    }

}
