using System;
using UnityEngine;

namespace Game
{
    public class DefenseUpgradeState
    {
        private GameObject prefab;
        private float maximumRange;
        private float minimumRange;
        private float damages;
        private float firerate;
        private int cost;
        private float health;
        private float turningSpeed;
       


        public DefenseUpgradeState()
        {
            
        }
    }
}

