using System;
using UnityEngine;

namespace Game
{
    public enum EffectType
    {
        Slow
    }
}

