using System;
using UnityEngine;

namespace Game
{
    public class Node
    {
        private Defense defense;
        private Defense tempDefense;
        private Defense defenseClass;
        private Vector3 position;
        private BuildManager buildManager;
        private bool isUpgraded;

        public Node()
        {

        }
        public void onMouseEnter()
        {

        }
        public void onMouseExit()
        {

        }
        public void setOver(bool state)
        {

        }
        public void onMouseDown()
        {

        }
        public void isPointerOverUIElement()
        {

        }
        public void upgradeDefense()
        {

        }
        public void sellDefense()
        {

        }
    }
}

