using System;
using UnityEngine;

namespace Game
{
    public class Obus : Projectile
    {
        private GameObject prefab;
        private Ennemy ennemy;
        private float speed;
        private int damage;
        private GameObject bulletImpact;

        public Obus()
        {
        }

        new public void SetTarget(Ennemy target)
        {

        }

        new public void SetDamage(float damage)
        {

        }
        new public void HitTarget()
        {

        }
    }

}
