using System;
using System.Collections.Generic;

namespace Game
{
    public class AoeTargetStrategy : AttackStrategy
    {
        public AoeTargetStrategy()
        {

        }
        public void ExecuteAttack(List<Ennemy> ennemies)
        {



        }
    }
}

