@startuml "DefenseDefense"

package "System" {

    /'Wait of the manager to be done'/
    class GameManager {
        + waveNumber : int
        + lives : int
        + monney : int
        + leaderboard : Leaderboard
        + StartGame()
        + EndGame()
        + UpdateWave()
        + AddGold(amount : int)
        + LoseLife()
    }

    class Leaderboard {
        + scores : List<Score>
        + AddScore(playerName : string, waveNumber : int)
        + GetTopScores() : List<Score>
    }

    class Score {
        + playerName : string
        + wave : int
        + AddScore():void
    }

    GameManager --> Leaderboard
}

package "Building" {
    package "AttackStrategies" {
        interface IAttackStrategy {
            + ExecuteAttack(Defense : Defense, enemies : List<Enemy>)
        }

        class SingleTargetStrategy implements IAttackStrategy {
            + ExecuteAttack(Defense : Defense, enemies : List<Enemy>)
        }

        class AoeTargetStrategy implements IAttackStrategy {
            + ExecuteAttack(Defense : Defense, enemies : List<Enemy>)
        }
    }

    

    class DefenseUpgradeState{
        + prefab : GameObject    
        + maximumRange : float   
        + damages : float
        + fireRate : float     
        + cost : int
        + health : float
    }

    /'Ennemy layer : liste des ennemy qui peuvent être touché '/

    class Defense {
        - name : string
        - upgradeLevel : int
        - UpgradeState : List<DefenseUpgradeState>

        + Shoot(target: ennemy) : void
        + findTarget() : Trasnform

        - target : Transform
        - ennemyLayer : LayerMask 
        - movingPartx : Trasnform
        - movingParty : Trasnform
        - projectile : Projectile
        - firePoint : Transform
        - muselFlashPrefab : GameObject
        - defaultRotationX : quaternion
        - defaultRotationY : quaternion
        - active : bool
    }

    class Projectile{

        + prefab : GameObject
        + target : ennemy
        + speed : float
        + damage : float
        + bulletImpact : GameObject

        + SetTarget(target : ennemy) : void
        + setDamage(damage : float) : void
        + hitTarget() : void
    }

    class Obus implements Projectile{
        + prefab : GameObject
        + target : ennemy
        + speed : float
        + damage : float
        + bulletImpact : GameObject

        + explode() : void
        + calculteDammageMultiplier(distance:float) : float
        + hitTarget() : void
        + setAerialLaucnh(aerialLaunch:bool) : void
        + setSpeed(speed : float) : void
    }

    class Bullets implements Projectile{
        + prefab : GameObject
        + target : ennemy
        + speed : float
        + damage : float
        + bulletImpact : GameObject
    }

    class DefenseUpgradeState{
        + prefab : GameObject
        + maximumRange : float
        + minimumRange : float
        + turningSpeed : float
        + damage : float
        + fireRate : float
    }

    class Sniper extends Defense {
        findTarget() : Transform
    }

    class Mortier extends Defense {
        findTarget() : Transform
    }

     class Mitrailleuse extends Defense {
        findTarget() : Transform
    }

    enum EffectType {
        Slow
    }

    Defense --* AttackStrategies.IAttackStrategy : Strategy
}

package "Enemy" {
    abstract class Enemy {
        + baseHealth : float
        + health : float
        + reward : int
        + canva : canvas
        + healthBar : Image
        + agent : navMeshAgent
        + type : EnemyType

        + TakeDamage(amount : float) : void
        + Die() : void 
    }

    class zombie extends Enemy {
        + prefab : GameObject

        + TakeDamage(amount : float) : void

        + Die() : void
    }
    /' Strategy pattern here'/

    enum EnemyType {
        Explosive
    }
    /' '/
    class EnemySpawner {
        + startPoint : Transform
        + objectivePoint : Transform
        + timeBetweenWaves : float
        + countdown : float
        + waveindex : int
        + ennemyCount : int
        + ennemyList : List<Enemy>

        + SpawnWave(waveIndex : int)
        + SpawnEnnemy() : Enemy
    }
}

package "Map" {

    /'Singleton pour la map'/

    class Map {
        + Nodes : List<Node>
        + spawnPoint : Transform
        + endPoint : Transform
        + surface : navMesh
        + buildManager : BuildManager

        + IsValidPosition(position : Vector3) : bool
        + PlaceDefense(position : Vector3, Defense : Defense)
    }

    class Node {
        + defense : Defense
        + tempDefense : Defense
        + defenseClass : Defense
        + position : Vector3

        + buildManager : BuildManager
        + isUpgraded : bool

        + onMouseEnter() : void
        + onMouseExit() : void
        + setOver(state: bool ) : void
        + OnMouseDown() : void
        + isPointerOverUIElement() : bool
        + UpradeDefense() : void
        + SellDefense() : void
    }

    /'singleton'/
    class BuildManager {

            - BuildManager : BuildManager
            + defenseToBuild : Defense
            - selectedNode : Node
            - SelectUi : SelectUiScript
            - GetDefenseToBuild() : Defense
            - CanBuild() : bool
            - selectdNode(node : Node) : void
            - deSelectNode() : void
            - selectDefenseToBuild(Defense : Defense) : void
            - BuildDefenseOn(activate : bool , upgrade : bool ) : void
        }

    Map --> Node
}

GameManager --> "1..*" Building.Defense
GameManager --> "1..*" Enemy.Enemy
GameManager --> "1" Map.Map

Building.Defense --> Map.Map : Uses
Enemy.Enemy --> Map.Map : Uses
EnemySpawner --> Enemy.Enemy : Creates

@enduml
```
Abstract factory pour le shop

